[package]
name = "bitcoin_solo_miner"
version = "0.1.0"
edition = "2024"
authors = ["viraladmin <bc1qks95p0aw09qhfh3e4p7qhr5qtkcg0hnf6erjph>"]
description = "A bitcoin solo miner for CPUs that changes the metadata each loop instead of nonce"
license = "MIT"
readme = "README.md"
repository = "https://github.com/viraladmin/bitcoin_solo_miner"
homepage = "https://github.com/viraladmin/bitcoin_solo_miner"
documentation = "https://docs.rs/crate/bitcoin_solo_miner"


[dependencies]
bitcoin = "0.31.2"
dotenvy = "0.15"
hex = "0.4.3"
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3", features = ["std"] }
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fastrand = "2.0"
once_cell = "1.21.3"
